Agregar nuevo archivo .py y primera prueba de uso wikipedia

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5482e26e-b5e0-416e-8adf-b6f46aca2342",
    "metadata": {},
    "outputs": [],
@@ -16,6 +16,24 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3ee73f4c-fd5a-4229-85b4-336c2842f4d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop_words= get_stop_words('es')\n",
+    "len(stop_words)\n",
+    "print(wikipedia.languages())\n",
+    "                           \n",
+    "#fijamos el idioma a español\n",
+    "wikipedia.set_lang(\"es\")\n",
+    "print(wikipedia.search(\"Python\"))\n",
+    "print(wikipedia.search(\"Python\", results = 3))\n",
+    "print(wikipedia.suggest(\"Madriz\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2387bf8-8f06-428c-9df5-d4af0396d872",
    "metadata": {},
    "outputs": [],
    "source": []
