Obtener página y extraer texto

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5482e26e-b5e0-416e-8adf-b6f46aca2342",
    "metadata": {},
    "outputs": [],
@@ -32,11 +32,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b2387bf8-8f06-428c-9df5-d4af0396d872",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Que página queremos descargar\n",
+    "wiki = wikipedia.page('Python')\n",
+    "\n",
+    "# Sacamos el texto de la página\n",
+    "text= wiki.content\n",
+    "\n",
+    "# Sacamos el texto de la página\n",
+    "text= wiki.content\n",
+    "\n",
+    "# Cleantext\n",
+    "text= re.sub(r'==.*?==+', '', text) # eliminamos los headers\n",
+    "text= text.replace('\\n', '') # eliminamos los saltos de línea"
+   ]
   }
  ],
  "metadata": {
