Crear función plot_cloud

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -50,6 +50,34 @@
     "text= re.sub(r'==.*?==+', '', text) # eliminamos los headers\n",
     "text= text.replace('\\n', '') # eliminamos los saltos de línea"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2b47641b-67fb-4830-a23a-64d1a8d8eba8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# Creamos una función para generar el gráfico\n",
+    "def plot_cloud(wordcloud):\n",
+    "    # fijamos el tamaño\n",
+    "    plt.figure(figsize=(40, 30))\n",
+    "    # plotde la imagen\n",
+    "    plt.imshow(wordcloud)\n",
+    "    # sin ejes\n",
+    "    plt.axis(\"off\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86a0e0ca-86df-4d55-8c48-c00de0dff604",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
