Generar nube de palabras

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -77,7 +77,16 @@
    "id": "86a0e0ca-86df-4d55-8c48-c00de0dff604",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Importamos el paquete para hacer la nube de palabras\n",
+    "from wordcloud import WordCloud\n",
+    "\n",
+    "# Genaramosla nube\n",
+    "wordcloud= WordCloud(width= 3000, height= 2000, random_state=1,\n",
+    "                     background_color='white',colormap='viridis',\n",
+    "                     collocations=False, stopwords= stop_words + [\"Python\", \"puede\", \"pueden\"]).generate(text)\n",
+    "plot_cloud(wordcloud)"
+   ]
   }
  ],
  "metadata": {
