Crear función crear_nube

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -87,6 +87,29 @@
     "                     collocations=False, stopwords= stop_words + [\"Python\", \"puede\", \"pueden\"]).generate(text)\n",
     "plot_cloud(wordcloud)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7b91ee6b-6aa7-4637-b551-f81a17f32b94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crear_nube(x) :\n",
+    "    wikipedia.set_lang(\"es\")\n",
+    "    wiki = wikipedia.page(x)\n",
+    "\n",
+    "    text= wiki.content\n",
+    "    text= re.sub(r'==.*?==+', '', text) # eliminamos los headers\n",
+    "    text= text.replace('\\n', '') # eliminamos los saltos de línea\n",
+    "    \n",
+    "    wordcloud= WordCloud(width= 3000, height= 2000, random_state=1,\n",
+    "                         background_color='white',colormap='viridis',\n",
+    "                         collocations=False, stopwords= stop_words+ [x]).generate(text)\n",
+    "    nube = plot_cloud(wordcloud)\n",
+    "    \n",
+    "    return(nube)"
+   ]
   }
  ],
  "metadata": {
