Crear nube para Aranjuez y Toledo

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5482e26e-b5e0-416e-8adf-b6f46aca2342",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b2387bf8-8f06-428c-9df5-d4af0396d872",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "2b47641b-67fb-4830-a23a-64d1a8d8eba8",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7b91ee6b-6aa7-4637-b551-f81a17f32b94",
    "metadata": {},
    "outputs": [],
@@ -109,6 +109,26 @@
     "    nube = plot_cloud(wordcloud)\n",
     "    \n",
     "    return(nube)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3420fb5c-23c1-4a62-9f2f-d44d1b2100ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crear_nube(\"Aranjuez\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06ea960b-3f84-4987-9f9c-b1df0786dd61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crear_nube(\"Toledo\")"
    ]
   }
  ],
